# openbb-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pre_gen_project.py  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  {% if cookiecutter.add_command == 'yes' %}router.py{% endif %}  {% if cookiecutter.add_provider == 'yes' %}provider.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/{% if cookiecutter.add_provider == 'yes' %}models{% endif %}/: example.py
{{cookiecutter.project_tag}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_tag}}/{{cookiecutter.package_name}}/: __init__.py  openbb.py  provider.py  router.py  {% if cookiecutter.add_command == 'yes' %}router.py{% endif %}
{{cookiecutter.project_tag}}/{{cookiecutter.package_name}}/models/: example.py
{{cookiecutter.project_tag}}/{{cookiecutter.package_name}}/{% if cookiecutter.add_provider == 'yes' %}models{% endif %}/: example.py  example_standard.py  {% if cookiecutter.add_provider == 'yes' %}example.py{% endif %}
{{cookiecutter.project_tag}}/{{cookiecutter.package_name}}/{% if cookiecutter.add_provider == 'yes' %}standard_models{% endif %}/: example_standard.py
