[tool.poetry]
name = "openbb-cookiecutter"
version = "0.1.0"
description = "Extension template for OpenBB SDK."
license = "MIT"
authors = ["OpenBB Team <hello@openbb.co>"]
packages = []
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/OpenBB-finance/openbb-cookiecutter"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
poetry = "^1.5.1"
cookiecutter = "^2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
pydocstyle = "^6.3.0"
bandit = "^1.7.5"
ruff = "^0.0.280"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
