[tool.poetry]
name = "openbb-cookiecutter"
version = "0.2.0"
description = "Extension template for OpenBB Platform."
license = "MIT"
authors = ["OpenBB Team <hello@openbb.co>"]
packages = []
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/OpenBB-finance/openbb-cookiecutter"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openbb = "^4.0.0"
poetry = "^1.7.1"
cookiecutter = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
