[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openbb-core = { path = "../../sdk/core" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
{% if cookiecutter.add_command == "yes" %}
[tool.poetry.plugins."openbb_core_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.router:router"
{% endif %}{% if cookiecutter.add_provider == "yes" %}
[tool.poetry.plugins."openbb_provider_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.provider:{{ cookiecutter.package_name }}_provider"
{% endif %}
