[tool.poetry]
name = "{{ cookiecutter.project_tag }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openbb-core = {version = "^0.0.0a3", source = "test-pypi"}
# Remove this once everything is published to stable
openbb-provider = {version = "^0.0.0a1", source = "test-pypi"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}:provider"

# Remove this block when you are ready to publish to PyPI
[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"