[tool.poetry]
name = "{{ cookiecutter.project_tag }}"
version = "1.0.0"
description = ""
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
# TODO: Change this to the actual version of the core once published
openbb-core = { path = "/Users/igor/Documents/GitHub/OpenBBTerminal/openbb_platform/core" }
openbb-devtools = { version = "^1.0.0b1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.provider:provider"
