[tool.poetry]
name = "{{ cookiecutter.project_tag }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = { version = "^1.1.2" }

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.provider:provider"
